--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint-fix": "eslint --fix --ext .ts,.tsx ."
+    "lint-fix": "eslint --fix --ext .ts,.tsx .",
+    "format": "prettier . --write"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +52,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "3.2.5",
     "react-router-dom": "^6.22.3",
     "typescript": "^4.9"
   }
