--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react-router": "^5.1.20",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
@@ -55,5 +56,8 @@
     "prettier": "3.2.5",
     "react-router-dom": "^6.22.3",
     "typescript": "^4.9"
+  },
+  "prettier": {
+    "printWidth": 100
   }
 }
