--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Run Unit Tests
-        run: npm test --passWithNoTests
+        run: npm test
 
       - name: Run Static Code Analysis
         run: npm run lint
