--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: "18"
 
       - name: Install Dependencies
-        run: npm install
+        run: npm install --force
 
       - name: Run Unit Tests
         run: npm test
